[gd_scene load_steps=8 format=3 uid="uid://0tmgfdrr5ie"]

[ext_resource type="Script" path="res://Main Scenes/field.gd" id="1_2nrvi"]
[ext_resource type="PackedScene" uid="uid://dswn8enkyxmbd" path="res://Objects/ball.tscn" id="1_ce66m"]
[ext_resource type="PackedScene" uid="uid://cy047ed2uj07y" path="res://Objects/player_1.tscn" id="1_sy2fa"]
[ext_resource type="PackedScene" uid="uid://dhjh26tch6xyx" path="res://Objects/player_2.tscn" id="4_w3vth"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8u0r"]
size = Vector2(1302.5, 86.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijo1a"]
size = Vector2(130.5, 692)

[sub_resource type="GDScript" id="GDScript_nx5dv"]
script/source = "extends Label


func _process(_delta):
	text = str(Game.player1Score) + \" - \" + str(Game.player2Score)
"

[node name="Field" type="Node2D"]
script = ExtResource("1_2nrvi")

[node name="Back" type="Button" parent="."]
offset_left = 13.0
offset_top = 14.0
offset_right = 82.0
offset_bottom = 45.0
text = "Back
"

[node name="Objects" type="Node2D" parent="."]

[node name="Ball" parent="Objects" instance=ExtResource("1_ce66m")]
position = Vector2(576, -137)

[node name="Player1" parent="Objects" instance=ExtResource("1_sy2fa")]
position = Vector2(150, 324)

[node name="Player2" parent="Objects" instance=ExtResource("4_w3vth")]
position = Vector2(1002, 324)

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(571, -43.125)
shape = SubResource("RectangleShape2D_h8u0r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(576, 691)
shape = SubResource("RectangleShape2D_h8u0r")

[node name="Player1DeathBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1DeathBox"]
position = Vector2(-65.25, 323)
shape = SubResource("RectangleShape2D_ijo1a")

[node name="Player2DeathBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2DeathBox"]
position = Vector2(1217, 325)
shape = SubResource("RectangleShape2D_ijo1a")

[node name="ScoreKeeper" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 50
text = "# - #"
horizontal_alignment = 1
script = SubResource("GDScript_nx5dv")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="body_entered" from="Player1DeathBox" to="." method="_on_player_1_death_box_body_entered"]
[connection signal="body_entered" from="Player2DeathBox" to="." method="_on_player_2_death_box_body_entered"]
